--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
 
  :root{
   --primary-white: #fff;
-  --primary-dark: rgb(255, 255, 255, 0);
+  --primary--light-gray: #f4f4f4;
+  --primary-dark: rgb(52, 58, 64);
   --primary-red: rgb(247, 54, 6);
   --primary-violet: rgb(117, 2, 184);
 }
@@ -135,7 +136,7 @@ nav ul li {
 }
 
 /*--------------   ABOUT ME SECTION  -----------------*/
- 
+
 .photo-wrap{
   display: flex;
   justify-content: center;
@@ -162,3 +163,60 @@ nav ul li {
     height: 15rem;
   }
 }
+
+/*--------------   SERVICES SECTION  -----------------*/
+.services{
+  text-align: center;
+  padding-bottom: 2rem;
+  background-color: var(--primary--light-gray);
+}
+
+.services h1{
+  color: var(--primary-dark);
+  text-transform: uppercase;
+}
+
+.services .circle{
+  position: relative;
+  margin: 0.375rem auto;
+  background-color: var(--primary-red);
+  border-radius: 50%;
+  width: 3.125rem;
+  height: 3.125rem;
+}
+
+.services .icon{
+  font-size: 1.4rem;
+  color: var(--primary-white);
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  transform: translate(-50%, -50%);
+}
+
+.services .box{
+  height: 16rem;
+  border-bottom: 1px solid var(--primary-red);
+  padding: 0.625rem;
+  margin-bottom: 1.875rem;
+  background-color: var(--primary-white);
+}
+
+.services .box:hover{
+  background: var(--primary-red);
+  border-bottom: 1px solid var(--primary-dark);
+}
+
+.services .box:hover .icon{
+  color: var(--primary-dark);
+}
+
+.services .box:hover .circle{
+  background: var(--primary-white);
+}
+
+.services .box:hover p{
+  color: var(--primary-white);
+}
+
+
