--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
  :root{
   --primary-white: #fff;
   --primary--light-gray: #f4f4f4;
+  --primary--dark-gray: #666666;
+  --primary--gray: #ccd1d9;
   --primary-dark: rgb(52, 58, 64);
   --primary-red: rgb(247, 54, 6);
   --primary-violet: rgb(117, 2, 184);
@@ -219,4 +221,93 @@ nav ul li {
   color: var(--primary-white);
 }
 
+/*--------------   EXPERIENCE SECTION  -----------------*/
 
+.experience{
+  padding: 0.7rem;
+}
+
+.experience-wrapper{
+  position: relative;
+  padding: 3.125rem;
+  overflow: hidden;
+}
+
+.experience h1{
+  text-transform: uppercase;
+  color: var(--primary-red);
+}
+
+.experience-wrapper::before{
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 50%;
+  margin-left: -0.0625rem;
+  width: 0.125rem;
+  height: 100%;
+  background: var(--primary--gray);
+  z-index: 1;
+}
+
+.timeline-block{
+  width: calc(50% + 0.5rem);
+  display: flex;
+  justify-content: space-between;
+  clear: both;
+}
+
+.timeline-block-right{
+  float: right;
+}
+
+.timeline-block-left{
+  float: left;
+  direction: rtl;
+}
+
+.marker{
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  border: 0.3125rem solid var(--primary-dark);
+  background: var(--primary-red);
+  margin-top: 0.825rem;
+  z-index: 3;
+}
+
+.timeline-content{
+  width: 95%;
+  padding: 0 0.9375rem;
+  color: var(--primary--dark-gray);
+  direction: ltr;
+}
+
+.timeline-content h3{
+  margin-top: 0.3125rem;
+  color: var(--primary-red);
+  font-weight: 100;
+}
+
+
+/*--------------  MEDIA  -----------------*/
+
+@media(max-width: 768px){
+  .experience-wrapper:before{
+    left:1.4rem;
+    margin-bottom: 1.875rem;
+  }
+
+  .timeline-block-right{
+    float: none;
+    width: 100%;
+  }
+  
+  .timeline-block-left{
+    float: none;
+    direction: ltr;
+    width: 100%;
+  }
+
+
+}
