--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@
   --primary-dark: rgb(52, 58, 64);
   --primary-red: rgb(247, 54, 6);
   --primary-violet: rgb(117, 2, 184);
+  --primary--black: #000000;
+
 }
 
  body{
@@ -202,6 +204,7 @@ nav ul li {
   padding: 0.625rem;
   margin-bottom: 1.875rem;
   background-color: var(--primary-white);
+  transition: 0.3s ease-in-out;
 }
 
 .services .box:hover{
@@ -308,6 +311,102 @@ nav ul li {
     direction: ltr;
     width: 100%;
   }
+    
+}
 
+/*--------------   PORTFOLIO SECTION  -----------------*/
+.portfolio-wrapper{
+  background: var(--primary--light-gray);
+  padding: 3rem 0;
+}
 
+.portfolio-wrapper h1{
+  color:var(--primary-red)
+}
+
+.portfolio-img{
+  width: 15rem;
+  height: 9.615rem;
+  border: 1px solid var(--primary-red);
+  padding: 0.5rem 0.5rem;
+}
+
+.portfolio-img-box{
+  position: relative;
+  margin: 1rem;
+}
+
+/*--------------   OVERFLOW BOX  -----------------*/
+.overflow{
+  position: absolute;
+  opacity: 0;
+  background: var(--primary--black);
+  width: 15rem;
+  height: 9.615rem;
+  top: 0;
+  bottom: 1px solid var(--primary-red);
+  cursor: pointer;
+}
+
+.portfolio-img-box:hover .overflow{
+  opacity: 0.6;
+  transition: 0.3s ease-in-out;
+}
+
+.portfolio-icon{
+  position: absolute;
+  opacity: 0;
+  margin-left: -8rem;
+  margin-top: 3.6rem;
+  color: var(--primary-red);
+  font-size: 1.5rem;
+}
+
+.portfolio-img-box:hover .portfolio-icon{
+  opacity: 0.7;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+/*--------------   POPUPBOX   -----------------*/
+.portfolio-img-popupbox{
+  width: 45rem;
+  padding: 0 0.5rem;
+}
+
+.hyper-link {
+  cursor: pointer;
+  color: var(--primary-red);
+}
+
+.hyper-link:hover {
+  cursor: pointer;
+  color: var(--primary-violet);
+}
+
+/*--------------   MEDIA   -----------------*/
+@media(max-width: 768px){
+  .portfolio-img-popupbox{
+    width: 100%;
+  }
+}
+
+@media(max-height: 570px){
+  .portfolio-wrapper{
+    height: 100%;
+  }
+
+  .portfolio-img-popupbox{
+    width: 60%;
+  }
+}
+
+@media(max-height: 280px){
+  .portfolio-wrapper{
+    height: 90%;
+  }
+
+  .portfolio-img-popupbox{
+    width: 30%;
+  }
 }
