--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   --primary-red: rgb(247, 54, 6);
   --primary-violet: rgb(117, 2, 184);
   --primary--black: #000000;
+  --primary--green: green;
 
 }
 
@@ -410,3 +411,100 @@ nav ul li {
     width: 30%;
   }
 }
+
+/*--------------   CONTACTS SECTION   -----------------*/
+.contacts{
+  background: var(--primary-dark);
+  padding: 3rem 0;
+}
+
+.contacts h1{
+  color: var(--primary-red);
+  padding: 1.3rem 0;
+  text-transform: uppercase;
+}
+
+.contacts p{
+  color: var(--primary--gray);
+  font-size: 1.2rem;
+}
+
+/*-----------------   INPUTS   --------------------*/
+.contacts input, .contacts textarea{
+  width: 100%;
+  box-sizing: border-box;
+  background: none;
+  resize: none;
+  border: 0;
+  border-bottom: 0.125rem solid var(--primary--gray);
+  border-radius: 0;
+  color: var(--primary-red);
+  outline: 0 !important;
+  box-shadow: none !important;
+  margin-bottom: 1rem;
+  padding-left: 0 !important;
+}
+
+.contacts .container{
+  padding: 4rem 0;
+}
+
+.contacts input:focus, .contacts textarea:focus{
+  background: transparent;
+  color: var(--primary-red);
+  border-bottom: 0.125rem solid var(--primary--dark-gray);
+}
+
+.contacts textarea{
+  height: 12.5rem !important;
+}
+
+.contact-btn{
+  margin: 1rem 0 0 0;
+  width: 100%;
+  background: none;
+}   
+
+.line{
+  position: relative;
+  top: -0.8rem;
+  width: 0;
+  height: 0.125rem;
+  background: var(--primary-red);
+  display: inline-block;
+}
+
+input:focus+.line, textarea:focus+.line{
+  width: 100%;
+  transition: width 0.5s ease-in-out;
+}
+
+input.form-control, textarea.form-control{
+  margin: -0.3rem 0;
+}
+
+.error-message{
+  color:var(--primary-white);
+  background: var(--primary-violet);
+}
+
+.success-message{
+  font-weight: 900;
+  color: var(--primary--green);
+}
+  
+/*-----------------   MEDIA   --------------------*/
+@media(max-width:768px) {
+  .contacts{
+    overflow-x: hidden;
+  }
+  
+  .contacts .container{
+    padding: 0 1rem;
+  }
+
+  .contacts p{
+    padding: 0 0.4rem;
+  }
+}
+
